Bug 136407 - Default domain name gets appended wrong to username-only addresses with new mails
Summary: Default domain name gets appended wrong to username-only addresses with new m...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 90961 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-10-28 12:44 UTC by Daniel Hahler
Modified: 2009-09-03 22:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Hahler 2006-10-28 12:44:13 UTC
Version:            (using KDE KDE 3.5.5)
Installed from:    Ubuntu Packages

When composing a new email with
"user <username>"
as the email address, KMail adds the default domain name (of the Sending account) wrong:
"To: name @base <username>"

Note: it works for just "username", which gets expanded to "To: username@base".
Comment 1 Martin Koller 2009-08-04 14:22:16 UTC
SVN commit 1006789 by mkoller:

BUG: 136407

make sure to find the real mail address part when adding the defaultdomain


 M  +6 -5      stringutil.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1006789
Comment 2 Martin Koller 2009-09-03 22:54:45 UTC
*** Bug 90961 has been marked as a duplicate of this bug. ***