BUG: 136407

make sure to find the real mail address part when adding the defaultdomain

svn path=/trunk/KDE/kdepim/; revision=1006789